--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
   "devDependencies": {
     "@types/node": "^18.0.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "chokidar": "^3.5.3",
+    "dotenv": "^16.0.1",
+    "source-map-support": "^0.5.21",
+    "sucrase": "^3.23.0"
   }
 }
